tests/frontend/pass/array/cross_contract2.act
contract B

contract A

constructor
interface constructor()

creates

  uint[3] ar := [1,2,3]



constructor
interface constructor(address<A> a)

creates

  A x := a

ensures x.ar[2] * 0 == 0
