tests/frontend/fail/timed_calldata.act
contract Fail

constructor
interface constructor(uint y)

creates

  uint x := y

ensures

  post(x) >= pre(y)
